Fix item grid responsive breakpoints to prevent smushing (#205)
Shift column breakpoints up so items have more breathing room:
- 4 columns: only on xl screens (1500px+)
- 3 columns: xl down to lg (1000px-1500px)
- 2 columns: lg down to sm (650px-1000px)
- 1 column: below sm (650px)

Previously 4 columns kicked in at 1000px+ and 3 at 768px+,
causing items to be too narrow at those sizes.

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -2038,10 +2038,10 @@ ul.items {
     text-align: left;
     justify-content: start;
     width: calc(25% - 12px);
-    @include breakpoints.down("lg") {
+    @include breakpoints.down("xl") {
       width: calc(33.333% - 12px);
     }
-    @include breakpoints.down("md") {
+    @include breakpoints.down("lg") {
       width: calc(50% - 16px);
     }
     @include breakpoints.down("sm") {
